sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:3: error: not found: type bBoolean
  var swapped:bBoolean =true
              ^